mejorado el funcionamiento de busqueda por IA y eliminacion de funciones,varibales, etc..., sin usar